# HelloOpenCV

./: CMakeLists.txt  README.md  SetupUnix.sh  SetupVS22.ps1  SetupXcode.sh  vcpkg.json
source/: main.cxx
